--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<html>
-  <p><a href= "Ultraviolet A radiation also comes from sun lamps and tanning beds. Ultraviolet A radiation may cause premature aging of the skin and skin cancer..pdf
-">click here</a></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <a href= "Ultraviolet A radiation also comes from sun lamps and tanning beds. Ultraviolet A radiation may cause premature aging of the skin and skin cancer..pdf
+    ">click here</a>
+</body>
 </html>
